responsice-layout-assignment

--- a/src/ArticleListItem/ArticleListItem.module.css
+++ b/src/ArticleListItem/ArticleListItem.module.css
@@ -7,6 +7,17 @@
     padding: 10px;
 }
 
+.article {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.wrapper {
+    flex: 1;
+}
+
 .container + .container {
     margin-top: 30px;
 }
